# DCL_Dices

./: CMakeLists.txt  README.md
src/: CMakeLists.txt~  DCL_DicesConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/CvFindContours/: CMakeLists.txt  CvFindContours.cpp  CvFindContours.hpp
src/Components/DcCountDots/: CMakeLists.txt  CMakeLists.txt~  DcCountDots.cpp  DcCountDots.hpp  DcCountDots.hpp~
src/Components/DcDecision/: CMakeLists.txt  CMakeLists.txt~  DcDecision.cpp  DcDecision.cpp~  DcDecision.hpp  DcDecision.hpp~
src/Components/DcDiceReading/: CMakeLists.txt  CMakeLists.txt~  DcDiceReading.cpp  DcDiceReading.cpp~  DcDiceReading.hpp  DcDiceReading.hpp~
src/Components/DcFeatureExtraction/: CMakeLists.txt  DcFeatureExtraction.cpp  DcFeatureExtraction.hpp
src/Components/DcFindSquare/: CMakeLists.txt  CMakeLists.txt~  DcFindSquare.cpp  DcFindSquare.cpp~  DcFindSquare.hpp  DcFindSquare.hpp~
src/Components/DcImageProcessing/: CMakeLists.txt  DcImageProcessing.cpp  DcImageProcessing.hpp
src/Components/DcObjectRecognition/: CMakeLists.txt  (+2 more)
src/Components/DcPresentation/: CMakeLists.txt  DcPresentation.cpp  DcPresentation.hpp
src/Types/: CMakeLists.txt  CMakeLists.txt~  DcReading.hpp~  Dices.hpp  DicesMatrix.hpp  DicesMatrix.hpp~  SerializedPoint.hpp~
tasks/: CameraSplitViewer.xml  DcNTask.xml~  DcNTask2.xml~  DcNTask3.xml~  DcNTask4.xml~  DcNTask5.xml  DcNTask5.xml~  DcRec.xml  DcRec2.xml  DcRecognition.xml  DcTask.xml  DcTask2.xml  DcTask4.xml~  DcTask5.xml~  DcTask6.xml~  DcTask7.xml~  DcTask8.xml~  DcTest.xml
(+8 files in other folders)
